{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 25,
  "lineage": "417d1337-20a7-65d0-95d0-3b1f2a2210c2",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:security-group/sg-0005a5509f553c7c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0005a5509f553c7c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx.dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "451954663082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:route-table/rtb-06eaa8d6d02d33596",
            "default_route_table_id": "rtb-06eaa8d6d02d33596",
            "id": "rtb-06eaa8d6d02d33596",
            "owner_id": "451954663082",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudvests.dev-private_route"
            },
            "tags_all": {
              "Name": "cloudvests.dev-private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:internet-gateway/igw-05e94c9d545823d47",
            "id": "igw-05e94c9d545823d47",
            "owner_id": "451954663082",
            "tags": {
              "Name": "cloudvests.dev-gw"
            },
            "tags_all": {
              "Name": "cloudvests.dev-gw"
            },
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:route-table/rtb-0e844bfb1970dfe0a",
            "id": "rtb-0e844bfb1970dfe0a",
            "owner_id": "451954663082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e94c9d545823d47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudvests.dev-public_route"
            },
            "tags_all": {
              "Name": "cloudvests.dev-public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0499ba4f26d761f68",
            "route_table_id": "rtb-06eaa8d6d02d33596",
            "subnet_id": "subnet-0f6fdb476f687ca05"
          },
          "dependencies": [
            "module.my_vpc.aws_default_route_table.private_route",
            "module.my_vpc.aws_subnet.private_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00601477f4b61cd1b",
            "route_table_id": "rtb-06eaa8d6d02d33596",
            "subnet_id": "subnet-06c942f5eac4df957"
          },
          "dependencies": [
            "module.my_vpc.aws_default_route_table.private_route",
            "module.my_vpc.aws_subnet.private_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1634cd9ae0d263b",
            "route_table_id": "rtb-0e844bfb1970dfe0a",
            "subnet_id": "subnet-0d75422a8950a9ac3"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_route_table.public_route",
            "module.my_vpc.aws_subnet.public_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060829e9c114ec2f9",
            "route_table_id": "rtb-0e844bfb1970dfe0a",
            "subnet_id": "subnet-03647c445e3ed4feb"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_route_table.public_route",
            "module.my_vpc.aws_subnet.public_subnets",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:subnet/subnet-0f6fdb476f687ca05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6fdb476f687ca05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451954663082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudvests.dev-private_subnets.1"
            },
            "tags_all": {
              "Name": "cloudvests.dev-private_subnets.1"
            },
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:subnet/subnet-06c942f5eac4df957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c942f5eac4df957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451954663082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudvests.dev-private_subnets.2"
            },
            "tags_all": {
              "Name": "cloudvests.dev-private_subnets.2"
            },
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:subnet/subnet-0d75422a8950a9ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d75422a8950a9ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "451954663082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudvests.dev-public_subnets.1"
            },
            "tags_all": {
              "Name": "cloudvests.dev-public_subnets.1"
            },
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:subnet/subnet-03647c445e3ed4feb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03647c445e3ed4feb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "451954663082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudvests.dev-public_subnets.2"
            },
            "tags_all": {
              "Name": "cloudvests.dev-public_subnets.2"
            },
            "vpc_id": "vpc-0f31fc416a7669c6a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451954663082:vpc/vpc-0f31fc416a7669c6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0ed452353c8e69815",
            "default_route_table_id": "rtb-06eaa8d6d02d33596",
            "default_security_group_id": "sg-0bbefc81aad82fbab",
            "dhcp_options_id": "dopt-03aacdc43f2350bcc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f31fc416a7669c6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06eaa8d6d02d33596",
            "owner_id": "451954663082",
            "tags": {
              "Name": "cloudvests.dev-vpc"
            },
            "tags_all": {
              "Name": "cloudvests.dev-vpc"
            }
          }
        }
      ]
    }
  ]
}